# xpmovies

./: .gitignore  README.md  pyproject.toml  rxconfig.py
.web/: reflex.install_frontend_packages.cached  reflex.json
.web/.react-router/types/: +routes.ts
.web/app/: root.jsx
.web/app/routes/: [cartelera]._index.jsx  [pelicula].[1]._index.jsx  [pelicula].[2]._index.jsx  [pelicula].[3]._index.jsx  [pelicula].[4]._index.jsx  [pelicula].[5]._index.jsx  [pelicula].[6]._index.jsx  [pelicula].[7]._index.jsx  [pelicula].[8]._index.jsx  [proximamente]._index.jsx  [reservas].[1].[1]._index.jsx  [reservas].[1].[2]._index.jsx  [reservas].[1].[3]._index.jsx  [reservas].[2].[1]._index.jsx  [reservas].[2].[2]._index.jsx  [reservas].[2].[3]._index.jsx  [reservas].[3].[1]._index.jsx  [reservas].[3].[2]._index.jsx  [reservas].[3].[3]._index.jsx  [reservas].[4].[1]._index.jsx  [reservas].[4].[2]._index.jsx  [reservas].[4].[3]._index.jsx  [reservas].[5].[1]._index.jsx  [reservas].[5].[2]._index.jsx  [reservas].[5].[3]._index.jsx  [reservas].[6].[1]._index.jsx  [reservas].[6].[2]._index.jsx  [reservas].[6].[3]._index.jsx  [reservas].[7].[1]._index.jsx  [reservas].[7].[2]._index.jsx  [reservas].[7].[3]._index.jsx  [reservas].[8].[1]._index.jsx  [reservas].[8].[2]._index.jsx  (+2 more)
.web/public/: sitemap.xml
.web/styles/: __reflex_global_styles.css
.web/utils/: context.js
xpmovies/: xpmovies.py
xpmovies/components/: auth_modal.py  footer.py  navbar.py
xpmovies/pages/: cartelera.py  index.py  mock_data.py  pelicula.py  proximamente.py  reservas.py
xpmovies/styles/: theme.py
(+220 files in other folders)
