[project]
name = "xpmovies"
version = "0.1.0"
description = ""
authors = [
    {name = "Damian L",email = "damian26lp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "reflex (>=0.9.3,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
